GraphQL/Istio/VirtualService/VirtualService.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-vs-graphql
  namespace: dev
spec:
  hosts:
  - dev-svc-graphql.dev.svc.cluster.local
  http:
  - name: "andromeda-graphql-route"
    match:
    - uri:
        prefix: "/api/Andromeda"
    route:
    - destination:
        host: dev-svc-graphql.dev.svc.cluster.local
        subset: prod-group
